<resources>
    <string name="app_name">Conexión Biblica 2017</string>
    <string name="app_name_short">Conexión Biblica</string>

    <string name="title_level_activity">Selecciona el nivel</string>
    <string name="title_modal_participation">Participa con:</string>

    <string name="go">Listo..!</string>
    <string name="end_play">Fin..!</string>

    <string name="save_record">Guardar</string>
    <string name="next_play">Jugar</string>
    <string name="exit_play">Salir</string>

    <string name="title_record">Respuestas Correctas</string>
    <string name="title_time_record">Duración</string>


    <string name="timer_record_init">00:00:00</string>
    <string name="title_timer_record_init">Tiempo:</string>
    <string name="count_answer">6/10</string>

    <string name="title_dialog_pause">Pausa</string>
    <string name="questions_pause_play">¿Desea salir o continuar el juego?</string>
    <string name="pause_exit">Salir</string>
    <string name="pause_continue">Continuar</string>

    <string name="title_dialog_record_save">¿Desea Guardar el Puntaje?</string>
    <string name="questions_record_save">Guardar</string>
    <string name="record_save_yes">Si</string>
    <string name="record_save_no">No</string>
    <string name="name_record_text_view">Nombre:</string>

    <string name="save_toast">Guardado</string>


    <string name="name_aventureros">Aventureros</string>
    <string name="name_conquistadores">Conquistadores</string>
    <string name="name_guias_mayores">Guias Mayores</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
