<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sixelasavir.www.boombiblico.RecordActivity">


    <TextView
        android:id="@+id/title_record_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/title_record"
        android:textStyle="bold"
        android:textColor="@color/colorBaseNegative"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/number_record_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/title_record_text_view"
        android:layout_marginTop="20dp"
        android:text="content 1"
        android:textSize="15dp"/>

    <TextView
        android:id="@+id/title_time_record_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_below="@+id/number_record_text_view"
        android:layout_marginTop="30dp"
        android:text="@string/title_time_record"
        android:textColor="@color/colorBaseNegative"
        android:textStyle="bold"
        android:textSize="20dp"/>


    <TextView
        android:id="@+id/time_record_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/title_time_record_text_view"
        android:layout_marginTop="20dp"
        android:text="content 2"
        android:textSize="15dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@color/colorBase"
            android:text="@string/exit_play"
            android:onClick="exitRecord"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@color/colorBase"
            android:text="@string/save_record"
            android:onClick="saveRecord"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@color/colorBase"
            android:text="@string/next_play"
            android:onClick="nextPlay"/>
    </LinearLayout>
</RelativeLayout>
