<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sixelasavir.www.boombiblico.QuestionActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/question_card_view"
        android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/time_relative_layout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/count_answer"
                    android:textColor="@color/colorBaseNegative"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:id="@+id/count_answer"/>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@mipmap/ic_timer"
                    android:id="@+id/ic_timer"
                    android:layout_toLeftOf="@+id/timer_record_init"
                    android:layout_toStartOf="@+id/timer_record_init" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timer_record_init"
                    android:textColor="@color/colorBaseNegative"
                    android:id="@+id/timer_record_init"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:gravity="center"
                android:id="@+id/question_relative_layout"
                android:layout_below="@id/time_relative_layout">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/question_text_view"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center_horizontal"
                    android:text="@string/app_name"
                    android:textColor="@color/colorBaseNegative"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:layout_below="@id/question_relative_layout">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:paddingLeft="3dp"
                    android:paddingRight="3dp"
                    android:layout_marginBottom="15dp"
                    android:id="@+id/option_a_linear_layout"
                    android:background="@drawable/borders_answer_no_selectec">
                    <TextView
                        android:text="A"
                        android:id="@+id/option_a_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:paddingLeft="3dp"
                    android:paddingRight="3dp"
                    android:id="@+id/option_b_linear_layout"
                    android:background="@drawable/borders_answer_no_selectec">
                    <TextView
                        android:text="B"
                        android:id="@+id/option_b_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:paddingLeft="3dp"
                    android:paddingRight="3dp"
                    android:id="@+id/option_c_linear_layout"
                    android:background="@drawable/borders_answer_no_selectec">
                    <TextView
                        android:text="C"
                        android:id="@+id/option_c_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:paddingLeft="3dp"
                    android:paddingRight="3dp"
                    android:id="@+id/option_d_linear_layout"
                    android:background="@drawable/borders_answer_no_selectec">

                    <TextView
                        android:text="D"
                        android:id="@+id/option_d_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"/>
                </LinearLayout>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Siguiente"
                    android:id="@+id/after_button"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/cardview_light_background"/>

            </LinearLayout>



    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/value_card_view"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/value_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="50dp" />

    </android.support.v7.widget.CardView>

</RelativeLayout>